[package]
name = "civet"
version = "0.12.0-alpha.4"
authors = ["wycats"]
license = "MIT"
description = "civetweb-based server implementation for conduit"
repository = "https://github.com/jtgeibel/rust-civet"

[badges]
travis-ci = { repository = "https://github.com/jtgeibel/rust-civet" }

[dependencies]
conduit = "0.9.0-alpha.3"
libc = "0.2"

[dependencies.civet-sys]
path = "civet-sys"
version = "0.1.0"

[dev-dependencies]
route-recognizer = "0.1.0"
